pkg/lang/testdata/ub/config/valid/input-local-in-comprehension.ub
locals: { region: 'us-east-1' }

inputs: {
  names: [ for n in ['a', 'b'] : $'{{n}}.{{local.region}}' ]
}
