pkg/lang/testdata/ub/config/invalid/locals-var-reference.ub
locals: { region: var.region }

inputs: { region: 'us-east-1' }
